--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,21 @@
 name: 'Hello World'
 description: 'Greet someone and record the time'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  owner:
+    description: 'The owner of the repository'
     required: true
-    default: 'World'
+  repo:
+    description: 'The name of the repository'
+    required: true
+  pr_number:
+    description: 'The number of the pull request'
+    required: true
+  token:
+    description: 'The token to use to access the GitHub API'
+    required: true
 outputs:
   time: # id of output
-    description: 'The time we greeted you'
+    description: 'Action time'
 runs:
   using: 'node16'
   main: 'dist/index.js'
