--- a/.github/workflows/pr-metadata.yml
+++ b/.github/workflows/pr-metadata.yml
@@ -3,6 +3,8 @@ name: PR metadata annotation
 on: 
   pull_request:
     types: [opened, reopened, synchronize]
+  pull_request_review:
+    types: [edited, dismissed, submitted]
 
 jobs:
 
