--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Hello World'
+name: 'Pull Request Metadata'
 description: 'Greet someone and record the time'
 inputs:
   owner:
@@ -9,7 +9,6 @@ inputs:
     required: true
   pr_number:
     description: 'The number of the pull request'
-    required: false
   token:
     description: 'The token to use to access the GitHub API'
     required: true
