--- a/.github/workflows/pr-metadata.yml
+++ b/.github/workflows/pr-metadata.yml
@@ -2,7 +2,7 @@ name: PR metadata annotation
 
 on: 
   pull_request:
-    types: [opened, reopened, synchronize, closed, labeled]
+    types: [opened, reopened, synchronize, closed, labeled, review_requested]
   pull_request_review:
     types: [edited, dismissed, submitted]
 
