--- a/.github/workflows/pr-push-selected.yml
+++ b/.github/workflows/pr-push-selected.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
 
   notify-slack:
-    if: github.repository == 'main'
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     name: Notifies slack channel about push event
     outputs:
