--- a/.github/workflows/pr-push-selected.yml
+++ b/.github/workflows/pr-push-selected.yml
@@ -17,8 +17,7 @@ jobs:
           custom_payload: |
             {
               attachments: [{
-                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `VERIFY: ${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
+                text: `version deployed to \`${process.env.AS_REF}\`. <https://bit.ly/3rYNiVZ|Release notes>`,
               }]
             }
         env:
